# Context-Aware-Jenkins-Job-Transfers

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: publish.yml
jenkins_job_transfers/: Jenkins_Base_Module.py  __init__.py  baseModule.py  basemodule.py  config.py  utils.py  version.py
jenkins_job_transfers/tests/: __init__.py  config.py  conftest.py  test_check_and_install_plugin_dependencies.py  test_check_plugin_dependencies.py  test_check_publish_standards.py  test_connect.py  test_interim_cleanup.py  test_production_cleanup.py  test_servers.py  test_transfer.py
jenkins_job_transfers/tests/assets/xmlFilesForJobs/: jobWithPluginsNoViews.xml
jenkins_job_transfers/tests/assets/xmlFilesForViews/: viewWithJobsWithPlugins.xml
