[metadata]
name = Context-Aware-Jenkins-Job-Transfers
version = 1.0.2
description = Transfers Job b/w Jenkins Servers with relevant Views & Plugins
long_description = file: README.md
long_description_content_type = text/markdown
author = Joel Thomas Chacko
author_email = joeltc071@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = Jenkins, CICD, Jenkins-Transfer, Servers, TransferJobs, Plugins
url = https://context-aware-jenkins-transfers-documentation.readthedocs.io/en/latest/
project_urls =
    Repository = https://github.com/joelkariyalil/Jenkins-Transfers
    Homepage = https://context-aware-jenkins-transfers-documentation.readthedocs.io/en/latest/
    Issues = https://github.com/joelkariyalil/Jenkins-Transfers/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    python-jenkins==1.8.2
    lxml==5.1.0
    rich==13.7.1

[options.packages.find]
where = .
